IDEA-374962, IDEA-67605 [java]: cleanup
GitOrigin-RevId: 15ad4c1dc175e95b06da417b695bf615e4dff666